Making use of `Stream#toList`.